Funcional los 2 progrmas, queda pendiente el java jar